# smplat

./: .coverage  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_VISUAL_REFERENCE.md  CMS_COMPONENT_ARCHITECTURE.md  COMPONENT_LIBRARY_QUICKSTART.md  EXPLORATION_SUMMARY.txt  README.md  README_DOCUMENTATION.md  api_unification.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/api/: .coverage  .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/config/: schedules.toml
apps/api/tests/: conftest.py  test_analytics_preset_events.py  test_auth_identity_endpoints.py  test_automation_status_service.py  test_billing_endpoint.py  test_billing_gateway.py  test_billing_reconciliation.py  test_billing_recovery_scheduler.py  test_billing_sessions.py  test_billing_sessions_reports.py  test_blueprint_metrics_reporting.py  test_catalog_job_scheduler.py  test_celery_provider_automation_tasks.py  test_checkout_orchestration.py  test_experiment_analytics_service.py  test_fulfillment_metrics_service.py  test_fulfillment_processor.py  test_fulfillment_providers.py  test_fulfillment_service.py  test_guardrail_followups.py  test_health_endpoint.py  test_hosted_session_recovery_worker.py  test_instagram_service.py  test_invoice_notifications.py  test_journey_components.py  test_loyalty_endpoints.py  test_loyalty_guardrails.py  test_loyalty_jobs.py  test_loyalty_service.py  test_metric_validation.py  test_notification_preferences.py  test_notification_pricing_experiments.py  test_payments.py  (+28 more)
(+1159 files in other folders)
