[tool.poetry]
name = "smplat-api"
version = "0.1.0"
description = "FastAPI backend for SMPLAT platform"
authors = ["SMPLAT Team <engineering@smplat.test>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "smplat_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.25" }
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
aiosqlite = "^0.19.0"
redis = "^5.0.1"
celery = "^5.3.6"
passlib = "^1.7.4"
argon2-cffi = "^23.1.0"
loguru = "^0.7.2"
python-multipart = "^0.0.6"
asyncpg = "^0.30.0"
stripe = "^7.8.0"
apscheduler = "^3.10.4"
opentelemetry-api = "^1.38.0"
opentelemetry-sdk = "^1.38.0"
opentelemetry-exporter-otlp-proto-http = "^1.38.0"
opentelemetry-instrumentation-fastapi = "^0.59b0"
opentelemetry-instrumentation-logging = "^0.59b0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = { version = "^0.26.0", extras = ["cli"] }
ruff = "^0.1.14"
mypy = "^1.7.1"
types-redis = "^4.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
